--- a/index.html
+++ b/index.html
@@ -47,11 +47,18 @@
     
         var holes = document.querySelectorAll('.hole');
 
+        function randomInt(n) {
+            return Math.floor(Math.random() * n);
+        } 
+
         function moleClicked() {
             if (this.innerHTML === "") {
                 console.log('Mole is not here');
             } else {
                 console.log('Mole IS here!');
+                this.innerHTML = "";
+                var nextHole = holes[randomInt(9)];
+                nextHole.innerHTML = "M";
             }
         }
        
